--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <button id="newBookBtn">New Book</button>
+    <form id="newBookForm" style="display:none">
+        <input type="text" id="title" placeholder="Title" required>
+        <input type="text" id="author" placeholder="Author" required>
+        <input type="number" id="pages" placeholder="Pages" required>
+        <label>
+            <input type="checkbox" id="read"> Read
+        </label>
+        <button type="submit">Add Book</button>
+    </form>
+    <div id="booksContainer"></div>
 </body>
 </html>
